--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,14 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  firebase_core: ^0.4.0+9
+  firebase_core: ^1.1.0
+  firebase_auth: ^1.1.3
+  cloud_firestore: ^2.0.0
+  sembast: ^3.0.2
+  flutter_bloc: ^7.0.0
+  flutter_local_notifications: ^5.0.0+4
+  json_annotation: ^4.0.1
+  json_serializable: ^4.1.1
 
 dev_dependencies:
   flutter_test:
