Creating views structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_local_notifications: ^5.0.0+4
   json_annotation: ^4.0.1
   json_serializable: ^4.1.1
+  font_awesome_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
