--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   flutter_local_notifications: ^5.0.0+4
   font_awesome_flutter: ^9.0.0
+  keyboard_visibility: ^0.5.6
 
 dev_dependencies:
   flutter_test:
