--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   flutter_local_notifications: ^5.0.0+4
   font_awesome_flutter: ^9.0.0
   keyboard_visibility: ^0.5.6
-
+  shimmer: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
