--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: forat
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
@@ -19,13 +19,12 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   keyboard_visibility: ^0.5.6
   shimmer: ^2.0.0
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
   assets:
     - images/
 
