--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,20 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.2.1
 
 flutter:
   assets:
     - images/
 
   uses-material-design: true
+
+flutter_native_splash:
+  # This package generates native code to customize Flutter's default white native splash screen
+  # with background color and splash image.
+  # Customize the parameters below, and run the following command in the terminal:
+  # flutter pub run flutter_native_splash:create
+  # To restore Flutter's default white splash screen, run the following command in the terminal:
+  # flutter pub run flutter_native_splash:remove
+  color: "#ffffff"
+  image: images/logo.png
