--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,4 +39,6 @@ flutter_native_splash:
   # To restore Flutter's default white splash screen, run the following command in the terminal:
   # flutter pub run flutter_native_splash:remove
   color: "#ffffff"
+  color_dark: "#ffffff"
   image: images/logo.png
+  image_dark: images/logo.png
