--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   keyboard_visibility: ^0.5.6
   shimmer: ^2.0.0
+  mockito: ^5.0.14
 
 dev_dependencies:
   flutter_test:
